// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: contrast-high, orientation: "horizontal" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #AFB0B3;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-high, orientation: "horizontal" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #535457;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-high, orientation: "vertical" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #AFB0B3;
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-high, orientation: "vertical" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #535457;
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, orientation: "horizontal" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #404044;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, orientation: "horizontal" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #D8D8DB;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, orientation: "vertical" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #404044;
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, orientation: "vertical" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #D8D8DB;
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, orientation: {"base":"horizontal","xs":"vertical","s":"horizontal","m":"vertical","l":"horizontal","xl":"vertical"} and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #D8D8DB;
  height: 1px;
  width: 100%;
}
@media(min-width:480px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:760px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1000px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:1300px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1760px) {
  hr {
    height: 100%;
    width: 1px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, orientation: "horizontal" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #88898C;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, orientation: "horizontal" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #6B6D70;
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, orientation: "vertical" and theme dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #88898C;
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, orientation: "vertical" and theme light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
hr {
  margin: 0;
  padding: 0;
  border: none;
  text-align: start;
  background: #6B6D70;
  height: 100%;
  width: 1px;
}"
`;
